# django-odms-project

./: .gitignore  README.md  initsql.sql  requirements.txt
.github/workflows/: django-test.yml
publicdb/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
publicdb/api/: serializers.py  tests.py  urls.py  views.py
publicdb/pdapp/: admin.py  decorators.py  forms.py  mixins.py  models.py  tests.py  urls.py  validators.py  views.py
publicdb/pdapp/migrations/: 0001_initial.py  0002_alter_datasetfile_date_creation.py  0003_alter_datasetfile_options.py  0004_emailconfirmation.py
publicdb/pdapp/static/pdapp/CSS/: HTTP403.css  auth-layout.css  auth.css  dataset.css  editdatasetfile.css  editfile.css  faq.css  filechart.css  index.css  layout-no-side.css  layout.css  profile.css  registration_and_login.css  suggest.css
publicdb/pdapp/static/pdapp/JS/: auth.js  editdatasetfile.js  editfile.js  faq.js  filechart.js  layout.js  profile.js  validate-regform.js
publicdb/pdapp/templates/pdapp/: HTTP403.html  auth-layout.html  auth.html  dataset.html  editdatasetfile.html  editfile.html  faq.html  filechart.html  index.html  layout-no-side.html  layout.html  login.html  profile.html  registration.html  registration_and_login.html  suggest.html
publicdb/pdapp/templatetags/: has_group.py
publicdb/publicdb/: asgi.py  settings.py  urls.py  wsgi.py
