[tool.poetry]
name = "django-odms-project"
version = "0.1.0"
description = "Django Open Data Management System"
authors = ["Nikita Petrykin <nvnedu2120@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_odms_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
python-decouple = "^3.8"
whitenoise = "^6.4.0"
jinja2 = "^3.1.2"
django-crispy-forms = "^2.0"
openpyxl = "^3.1.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
django-redis-sessions = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
